@@ -23,8 +23,11 @@ WriteMakefile(
         },
     },
 );
-my $parser = Pod::Text->new( sentence => 0 );
 
-# Read POD from file.pod and write to file.txt.
-$parser->parse_from_file( 'lib/Bifcode.pm', 'README' );
+if ( -e '.git' ) {
+    my $parser = Pod::Text->new( sentence => 0 );
+
+    # Read POD from file.pod and write to file.txt.
+    $parser->parse_from_file( 'lib/Bifcode.pm', 'README' );
+}
 
